--- a/force-app/main/default/lwc/accountOpportunitiesViewer/accountOpportunitiesViewer.html
+++ b/force-app/main/default/lwc/accountOpportunitiesViewer/accountOpportunitiesViewer.html
@@ -10,7 +10,7 @@
                 </lightning-datatable>
             </template>
             <template lwc:else>
-                <div class={errorStyle} role="contentinfo">
+                <div class={errorStyle} role="contentinfo" style="background-color: transparent;">
                     <span class="slds-assistive-text">Erreur</span>
                     <p class="slds-p-around_medium slds-text-color_error">{error}</p>
                 </div>
